Fixing alignment of filter options select, mostly for IE.

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -1833,6 +1833,7 @@
     width: 50%;
   }
   .filter .options select {
+    font-size: 0.875em;
     float: right;
     width: 100%;
   }
